2005-02-18  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/seahorse-gpgmex-util.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade: Fix Key Properties windows
    for remote keys
    * agent/Makefile.am: Run seahorse-agent as setuid root so that 
    the passwords are cached properly.
    
2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Add «nb» to ALL_LINGUAS.

2005-02-17  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: Add default key servers,
    Fix XML syntax problem
    * libseahorse/seahorse-prefs.c:
    * libseahorse/seahorse-prefs.glade:
    * libseahorse/seahorse-recipients.c:
    * libseahorse/seahorse-recipients.glade:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-signer.glade:
    * libseahorse/seahorse-widget.c:
    * libseahorse/seahorse-widget.h:
    * src/seahorse-key-properties.c:
    * src/seahorse-key-properties.glade: Remove annoying window
    resize flicker when displaying dynamically built dialogs.
    * src/seahorse-key-manager-store.c: Fix problem with key manager 
    columns not responding to gconf changes properly.
    
2005-02-16  Alexander Shopov  <ash@contact.bg>

	* configure.in (ALL_LINGUAS): Added "bg" (Bulgarian)

2005-02-15  Nate Nielsen <nielsen@memberwebs.com>

    * data/seahorse.schemas.in: Fix tag problem 
    * src/seahorse-key-manager.glade: Fix warnings about events
	
2005-02-14  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-signer.c:
    * libseahorse/seahorse-signer.glade: Added missing files from 
    yesterday's 'Prompt for signer' checkin. 
    
2005-02-13  Nate Nielsen <nielsen@memberwebs.com>

    * libseahorse/Makefile.am:
    * libseahorse/seahorse-libdialogs.h:
    * plugins/gedit/seahorse-gedit.c:
    * src/main.c:
    * src/seahorse-revoke.c: Prompt for signer when no default 
    key is selected.
    * agent/seahorse-agent-cache.c: Display key UID properly in 