@@ -55,7 +55,7 @@
 	</oaf_attribute>
 	<oaf_attribute name="nautilus:context_menu_handler" type="boolean" value="true"/>
 	<oaf_attribute name="nautilus:can_handle_multiple_files" type="boolean" value="true"/>
-	<oaf_attribute name="nautilusverb:Sign" type="string" _value="Sign"/>
-	<oaf_attribute name="nautilusverb:Encrypt" type="string" _value="Encrypt..."/>
+	<oaf_attribute name="nautilusverb:Sign" type="string" _value="Sign..."/>
+	<oaf_attribute name="nautilusverb:Encrypt" type="string" _value="Encrypt and Sign..."/>
 </oaf_server>
 </oaf_info>
