@@ -102,19 +102,6 @@
 			</locale>
 		</schema>
         <schema>
-            <key>/schemas/desktop/pgp/sign_to_default</key>
-            <applyto>/desktop/pgp/sign_to_default</applyto>
-            <owner>seahorse</owner>
-            <type>bool</type>
-            <default>FALSE</default>
-            <locale name="C">
-                <short>When signing always use default key</short>
-                <long>If set to true, then user won't be prompted for 
-                a key to sign with. The default key will used for all 
-                signing operations.</long>
-            </locale>
-        </schema>
-        <schema>
             <key>/schemas/desktop/pgp/last_signer</key>
             <applyto>/desktop/pgp/last_signer</applyto>
             <owner>seahorse</owner>
