@@ -6,6 +6,14 @@
     for remote keys
     * agent/Makefile.am: Run seahorse-agent as setuid root so that 
     the passwords are cached properly.
+    * bonobo/Seahorse_PGP_File_Listener.in.in: 
+    * data/seahorse.schemas.in: 
+    * libseahorse/seahorse-context.h: 
+    * libseahorse/seahorse-prefs.c:
+    * libseahorse/seahorse-prefs.glade:
+    * libseahorse/seahorse-recipients.c:
+    * libseahorse/seahorse-signer.c: Polish up the signing key selection
+    changes. Make it clearer for user what's going on. 
     
 2005-02-18  Kjartan Maraas  <kmaraas@gnome.org>
 
